Qt GUI very slow when expanding packet details with a lot of items
This issue was migrated from bug 12228 in our old bug tracker.
Original bug information:
Reporter: Xiaochuan Sun
Status: RESOLVED FIXED
Product: Wireshark
Component: Qt UI
OS: Windows 7
Platform: x86
Version: 2.1.x (Experimental)
Attachments:
: crash figure
: good version
socS1.pcap: The pcap file which includes X2AP signaling
expand-all-sample.txt: Sample of OS X Wireshark doing "expand all" on the Packet From Hell