Qt: Defer proto tree column content resizing.

Try to avoid the following call graph:

ProtoTree::expandAll
  ...
    ProtoTree::expand
      ...
        QTreeView::resizeColumnToContents

QTreeView::resizeColumnToContents calls sizeHintForColumn, which
iterates over a number of items (default 1000). Calling it from
ProtoTree::expand can lead to excessive wheel-spinning.

Add a single-shot timer for resizeColumnToContents. This is similar to
what QTreeView does internally when columns are resized.

Bug: 12228
Change-Id: I7b50c1486b3a25817efae58efbb8c9e961dbdab0
Reviewed-on: https://code.wireshark.org/review/14411
Petri-Dish: Gerald Combs <gerald@wireshark.org>
Tested-by: Petri Dish Buildbot <buildbot-no-reply@wireshark.org>
Reviewed-by: Gerald Combs <gerald@wireshark.org>